<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color"
        />
    <!--底部tab菜单-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#FFFFFF"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
        <TextView
            android:id="@+id/tab_swen"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tab_shangwen"
            android:gravity="center"
            android:drawableTop="@drawable/tab_shangwen_selected"
            android:drawablePadding="6dp"
            android:layout_gravity="center_vertical"
            android:textColor="#FF999999"
            android:textSize="10dp"
            />
        <TextView
            android:id="@+id/tab_szhao"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tab_shangzhao"
            android:gravity="center"
            android:drawableTop="@drawable/tab_shangzhao"
            android:drawablePadding="6dp"
            android:layout_gravity="center_vertical"
            android:textColor="#FF999999"
            android:textSize="10dp"
            />
        <TextView
            android:id="@+id/tab_sji"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tab_shangji"
            android:gravity="center"
            android:drawableTop="@drawable/tab_shangji"
            android:drawablePadding="6dp"
            android:layout_gravity="center_vertical"
            android:textColor="#FF999999"
            android:textSize="10dp"
            />
        <TextView
            android:id="@+id/tab_xzhibao"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tab_xinzhibao"
            android:gravity="center"
            android:drawableTop="@drawable/tab_xinzhibao"
            android:drawablePadding="6dp"
            android:layout_gravity="center_vertical"
            android:textColor="#FF999999"
            android:textSize="10dp"
            />
    </LinearLayout>
</LinearLayout>