<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="152dp"
    android:background="#FFF0F0F0">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/author_article_subscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="center"
                    android:src="@drawable/xinzhibao_article_subscription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:gravity="center_horizontal"
                    android:text="@string/xinzhibao_subscription"
                    android:textColor="#FF333333"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/author_article_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="center"
                    android:src="@drawable/collection" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:gravity="center_horizontal"
                    android:text="@string/collect"
                    android:textColor="#FF333333"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/author_article_share_weixin_pengyouquan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="center"
                    android:src="@drawable/weixinpenyouquan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:gravity="center_horizontal"
                    android:text="@string/weixinpengyouquan"
                    android:textColor="#FF333333"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/author_article_share_weixin_haoyou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="center"
                    android:src="@drawable/weixinhaoyou" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:gravity="center_horizontal"
                    android:text="@string/weixinhaoyou"
                    android:textColor="#FF333333"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/author_article_share_mobile_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="center"
                    android:src="@drawable/mobileqq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:gravity="center_horizontal"
                    android:text="@string/mobile_qq"
                    android:textColor="#FF333333"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/author_article_share_sina_weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="center"
                    android:src="@drawable/sinaweibo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:gravity="center_horizontal"
                    android:text="@string/share_sina_weibo"
                    android:textColor="#FF333333"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/bt_over_cancle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFFFF"
        android:text="@string/cancle"
        android:textColor="#FF333333" />
</RelativeLayout>