<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/searchHuiZhan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/searchHuiZhanImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/search_huizhan" />

            <TextView
                android:id="@+id/searchHuiZhanText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="9dp"
                android:gravity="center"
                android:text="@string/search_huizhan"
                android:textColor="#FF333333"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/searchData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/searchDataImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/search_data" />

            <TextView
                android:id="@+id/searchDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="9dp"
                android:gravity="center"
                android:text="@string/search_data"
                android:textColor="#FF333333"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/searchZhaoShang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/searchZhaoShangImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/search_zhaoshang" />

            <TextView
                android:id="@+id/searchZhaoShangText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="9dp"
                android:gravity="center"
                android:text="@string/search_zhaoshang"
                android:textColor="#FF333333"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/searchZhaoBiao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/searchZhaoBiaoImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/search_zhaobiao" />

            <TextView
                android:id="@+id/searchZhaoBiaoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="9dp"
                android:gravity="center"
                android:text="@string/search_zhaobiao"
                android:textColor="#FF333333"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/searchReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/searchReportImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/search_report" />

            <TextView
                android:id="@+id/searchReportText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="9dp"
                android:gravity="center"
                android:text="@string/search_report"
                android:textColor="#FF333333"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>