<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="#FFFFFFFF">
    <LinearLayout
        android:id="@+id/ly_radar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/radar_gold"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/radar"
            android:textSize="@dimen/common_text_size_13"
            android:textColor="@color/tab_select_text_color"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/arrow_right"
            />
    </LinearLayout>
    <!--2-->
    <LinearLayout
        android:id="@+id/ly_fav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        <!--android:paddingTop="8dp"
        android:paddingBottom="8dp"-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/fav_collection"
            />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/action_favorite"
            android:textColor="@color/common_text_color"
            android:textSize="@dimen/common_text_size_13"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_right"
            />
    </LinearLayout>
    <!--3-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        <!--android:paddingTop="8dp"
        android:paddingBottom="8dp"-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/download"
            />
        <!--android:paddingLeft="15dp"-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/nav_download"
            android:textColor="@color/common_text_color"
            android:textSize="@dimen/common_text_size_13"
            />
            <ImageButton
            android:id="@+id/ib_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/float_button_selected"
            android:scaleType="fitXY"
            android:background="@android:color/transparent" />
    </LinearLayout>
    <!--4-->
    <LinearLayout
        android:id="@+id/ly_suggest"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        <!--android:paddingTop="8dp"
        android:paddingBottom="8dp"-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/suggesst"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/nav_suggest"
            android:textColor="@color/common_text_color"
            android:textSize="@dimen/common_text_size_13"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_right"
            />
    </LinearLayout>
    <!--5-->
    <LinearLayout
        android:id="@+id/ly_aboutus"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        <!--android:paddingTop="8dp"
        android:paddingBottom="8dp"-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/aboutus"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/nav_aboutus"
            android:textColor="@color/common_text_color"
            android:textSize="@dimen/common_text_size_13"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_right"
            />
    </LinearLayout>
</LinearLayout>